--- a/index.html
+++ b/index.html
@@ -59,6 +59,46 @@
                 </div>
             </div>
         </section>
+       
+        <section class="certifications">
+            <h2>Certifications & Achievements</h2>
+            <div class="cert-grid">
+                <div class="cert-card">
+                    
+                    <div class="cert-content">
+                        <h3>Infosys Springbord</h3>
+
+                        <p>Complate:- C Programming</p>
+                        <a href="#" class="cert-link" target="_blank">
+                            View Certificate
+                            <i data-lucide="external-link" class="cert-link-icon"></i>
+                        </a>
+                    </div>
+                </div>
+                <div class="cert-card">
+                    <i data-lucide="code" class="cert-icon"></i>
+                    <div class="cert-content">
+                        <h3>Xebia Acadmey</h3>
+                        <p>Complate Softwere-Craftsmanship</p>
+                        <a href="#" class="cert-link" target="_blank">
+                            View Certificate
+                            <i data-lucide="external-link" class="cert-link-icon"></i>
+                        </a>
+                    </div>
+                </div>
+                <div class="cert-card">
+                    <i data-lucide="database" class="cert-icon"></i>
+                    <div class="cert-content">
+                        <h3>Cisco</h3>
+                        <p>Introduction-cyber</p>
+                        <a href="#" class="cert-link" target="_blank">
+                            View Certificate
+                            <i data-lucide="external-link" class="cert-link-icon"></i>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </section>
 
         <section class="gallery">
             <h2>Gallery</h2>
